tests/snapshots/run_wpt_conformance__litert_conv2d_float16_4D_input_and_filter_tensors_options_inputLayout__nhwc__and_options_filterLayout__ihwo_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D input and filter tensors options.inputLayout='nhwc' and options.filterLayout='ihwo', litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dInput: f16[2, 3, 3, 1];
  }

  consts {
    operand_0: f16[1, 2, 2, 3] @bytes([167, 48, 144, 57, 234, 52, 189, 59, 15, 56, 235, 54, 239, 46, 54, 45, 225, 59, 32, 53, 62, 56, 218, 54]);
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, operand_0, bias=null, dilations=[], filterLayout="ihwo", groups=1, inputLayout="nhwc", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
